<resources>
    <string name="app_name">ttpro+</string>
    <string name="title_activity_server_list">ttpro+</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_server_entry">TeamTalk 5 Server Properties</string>
    <string name="title_activity_main">TeamTalk 5 for Android</string>
    <string name="title_section_channels">Channels</string>
    <string name="title_section_chat">Chat</string>
    <string name="title_section_media">Media Streams</string>
    <string name="title_section_files">Files</string>
    <string name="title_activity_channel_prop">Channel Properties</string>
    <string name="title_activity_user_prop">User Properties</string>
    <string name="title_activity_text_message">Text Message</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_stream_media">Stream media file to channel</string>
    <string name="action_createchannel">Create</string>
    <string name="action_updatechannel">Update</string>
    <string name="text_con_encryption_error">Encryption error: %1$s</string>
    <string name="text_con_failed">Failed to connect to server. Retrying...</string>
    <string name="text_con_lost">Lost connection to server</string>
    <string name="text_con_success">Connected to server</string>
    <string name="text_con_cmderr">Failed to issue command</string>
    <string name="text_cmderr_login">Failed to issue login command</string>
    <string name="text_cmd_loggedin">Logged on to server</string>
    <string name="text_cmd_joinchan">Joined channel:</string>
    <string name="text_cmd_leftchan">Left channel:</string>
    <string name="text_cmd_joinroot">Joined root channel</string>
    <string name="text_cmd_leftroot">Left root channel</string>
    <string name="text_cmd_userjoinchan">joined channel</string>
    <string name="text_cmd_userleftchan">left channel</string>
    <string name="text_cmd_userloggedout">logged out</string>
    <string name="text_cmd_userloggedin">logged in</string>
    <string name="pref_cat_subscriptions">Subscriptions</string>
    <string name="pref_cat_connection_general">General</string>
    <string name="pref_cat_tts">Text-To-Speech settings</string>
    <string name="pref_cat_tts_events">General Text-To-Speech messages</string>
    <string name="pref_cat_tts_transmission">Transmit Control Text-To-Speech messages</string>
    <string name="pref_cat_tts_subscription">Subscription Text-To-Speech messages</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_nickname">Nickname</string>
    <string name="pref_title_statusmsg">Status message</string>
    <string name="pref_default_nickname">NoName</string>
    <string name="pref_title_proximity_sensor">Proximity sensor</string>
    <string name="pref_title_keep_screen_on">Keep screen on when connected</string>
    <string name="pref_title_vibrate">Vibrate on PTT</string>
    <string name="pref_show_log_messages">Show log messages in chat history</string>
    <string name="pref_title_audio_icons">Sound Events</string>
    <string name="pref_title_rx_tx_audio_icon">Voice transmission toggle</string>
    <string name="pref_summary_rx_tx_audio_icon">Play sound when TX button is pressed</string>
    <string name="pref_title_vox_audio_icon">Voice activation toggle</string>
    <string name="pref_summary_vox_audio_icon">Play sound when voice activation button is pressed</string>
    <string name="pref_title_vox_triggered_icon">Voice activation triggered</string>
    <string name="pref_summary_vox_triggered_icon">Play sound when voice activation is triggered</string>
    <string name="pref_title_intercept_audio_icon">Intercept sound</string>
    <string name="pref_summary_intercept_audio_icon">Play sound when intercept starts or ends</string>
    <string name="pref_title_private_message_audio_icon">Private message</string>
    <string name="pref_summary_private_message_audio_icon">Play sound when private message is received</string>
    <string name="pref_title_channel_message_audio_icon">Channel message received</string>
    <string name="pref_summary_channel_message_audio_icon">Play sound when channel message is received</string>
    <string name="pref_title_broadcast_message_audio_icon">Broadcast message</string>
    <string name="pref_summary_broadcast_message_audio_icon">Play sound when broadcast message is received</string>
    <string name="pref_title_server_lost_audio_icon">Server connection lost</string>
    <string name="pref_summary_server_lost_audio_icon">Play sound when connection is dropped</string>
    <string name="pref_title_files_update_audio_icon">File list updated</string>
    <string name="pref_summary_files_update_audio_icon">Play sound when files are added or removed</string>
    <string name="pref_title_transmitready_icon">Exclusive mode toggled</string>
    <string name="pref_summary_transmitready_icon">Play sound when transmit ready in "No Interruptions" channel</string>
    <string name="pref_title_userjoin_icon">User joined channel</string>
    <string name="pref_summary_userjoin_icon">Play sound when user joins to the current channel</string>
    <string name="pref_title_userleft_icon">User left channel</string>
    <string name="pref_summary_userleft_icon">Play sound when user leaves the current channel</string>
    <string name="pref_header_connection">Connection</string>
    <string name="pref_title_auto_join_root">Join root channel upon connection</string>
    <string name="pref_summary_auto_join_root">Automatically join root channel after connecting to server</string>
    <string name="pref_title_sub_txtmsg">Text Messages</string>
    <string name="pref_summary_sub_txtmsg">Subscribe to text messages from users</string>
    <string name="pref_title_sub_chanmsg">Channel Messages</string>
    <string name="pref_summary_sub_chanmsg">Subscribe to channel text messages</string>
    <string name="pref_title_sub_bcastmsg">Broadcast Messages</string>
    <string name="pref_summary_sub_bcastmsg">Subscribe to broadcast text messages</string>
    <string name="pref_title_sub_voice">Voice</string>
    <string name="pref_summary_sub_voice">Subscribe to voice streams</string>
    <string name="pref_title_sub_video">Video Capture</string>
    <string name="pref_summary_sub_video">Subscribe to video capture streams</string>
    <string name="pref_title_sub_desktop">Desktop</string>
    <string name="pref_summary_sub_desktop">Subscribe to desktop streams</string>
    <string name="pref_title_sub_mediafile">Media File</string>
    <string name="pref_summary_sub_mediafile">Subscribe to media file streams</string>
    <string name="pref_header_tts">Text-To-Speech</string>
    <string name="pref_title_speech_engine">Text-To-Speech engine selection</string>
    <string name="pref_summary_speech_engine">Select one of the installed speech engines, different from system settings</string>
    <string name="pref_title_a11y_volume">Use accessibility stream volume</string>
    <string name="pref_summary_a11y_volume">Text to speech messages will be played at the accessibility stream volume</string>
    <string name="pref_title_use_announcements">Use announcement events</string>
    <string name="pref_summary_use_announcements">Text-to-speech messages will be announced through currently running accessibility service</string>
    <string name="pref_title_server_login">User logs on the server</string>
    <string name="pref_summary_server_login">Announce name of user logging in</string>
    <string name="pref_title_server_logout">User logs out of the server</string>
    <string name="pref_summary_server_logout">Announce name of user logging out</string>
    <string name="pref_title_channel_join">User joins the channel</string>
    <string name="pref_summary_channel_join">Announce name of the user joining the channel</string>
    <string name="pref_title_channel_leave">User leaves the channel</string>
    <string name="pref_summary_channel_leave">Announce name of the user leaving the channel</string>
    <string name="pref_title_private_message">Private messages</string>
    <string name="pref_summary_private_message">Announce private messages</string>
    <string name="pref_title_channel_message">Channel messages</string>
    <string name="pref_summary_channel_message">Announce channel messages</string>
    <string name="pref_title_broadcast_message">Broadcast messages</string>
    <string name="pref_summary_broadcast_message">Announce broadcast messages</string>
    <string name="pref_title_subscription_user_msg">User messages subscription</string>
    <string name="title_activity_audio_codec">Audio Codec</string>
    <string name="opus_application">Application</string>
    <string name="channel_prop_title_name">Name</string>
    <string name="channel_prop_title_topic">Topic</string>
    <string name="channel_prop_title_password">Password</string>
    <string name="channel_prop_title_op_password">Op Password</string>
    <string name="channel_prop_title_maxusers">Max Users</string>
    <string name="channel_prop_title_diskquota">Disk Quota (KBytes)</string>
    <string name="channel_prop_title_permanent">Permanent Channel</string>
    <string name="channel_prop_title_nointerrupt">No Interruptions</string>
    <string name="channel_prop_title_classroom">Classroom</string>
    <string name="channel_prop_title_oprecvonly">Operator Receives Only</string>
    <string name="channel_prop_title_novoiceact">No Voice Activation</string>
    <string name="channel_prop_title_noaudiorecord">No Audio Recording</string>
    <string name="opusbitrate">bitrate</string>
    <string name="opusinterval">Transmit interval</string>
    <string name="speexquality">Quality</string>
    <string name="speexinterval">Transmit interval</string>
    <string name="text_samplerate">Sample rate</string>
    <string name="text_ignore_silence">Ignore silence (DTX)</string>
    <string name="text_audchan">Audio channels</string>
    <string name="text_bitrate">Bitrate</string>
    <string name="text_txinterval">Transmit interval</string>
    <string name="text_framesize">Frame size</string>
    <string name="text_vbr">Variable Bitrate</string>
    <string name="text_quality">Quality</string>
    <string name="channamelab">Channel\'s name:</string>
    <string name="chanpswlab">Channel\'s password:</string>
    <string name="chantopiclab">Channel\'s topic:</string>
    <string name="chanoppswlab">Operator\'s password:</string>
    <string name="maxuserslab">Number of maximal users:</string>
    <string name="diskquotalab">Disk quota:</string>
    <string name="channel_prop_title_hiddenchannel">Hidden</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_note">Note</string>
    <string name="label_init_channel">Initial Channel</string>
    <string name="label_user_type">User Type</string>
    <string name="radio_type_default">Default</string>
    <string name="radio_type_admin">Admin</string>
    <string name="radio_type_none">Disabled</string>
    <string name="note_disabled_user">Disabled user accounts cannot log in</string>
    <string name="label_voice_bw">Voice Bandwidth (B/s)</string>
    <string name="label_video_bw">Video Bandwidth (B/s)</string>
    <string name="label_media_bw">Media File Bandwidth (B/s)</string>
    <string name="label_desktop_bw">Desktop Bandwidth (B/s)</string>
    <string name="label_total_bw">Total Bandwidth (B/s)</string>
    <string name="label_log_user_login">User Login/Logout</string>
    <string name="label_log_user_kick">User Kick/Ban</string>
    <string name="label_log_channel">Channel Create/Update</string>
    <string name="label_log_server_update">Server Update</string>
    <string name="label_log_file_transfer">File Transfer</string>
</resources>