<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_voice_bw" android:textStyle="bold" />
        <EditText android:id="@+id/edit_max_voice" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_video_bw" android:textStyle="bold" />
        <EditText android:id="@+id/edit_max_video" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_media_bw" android:textStyle="bold" />
        <EditText android:id="@+id/edit_max_media" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_desktop_bw" android:textStyle="bold" />
        <EditText android:id="@+id/edit_max_desktop" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_total_bw" android:textStyle="bold" />
        <EditText android:id="@+id/edit_max_total" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" />

    </LinearLayout>
</ScrollView>
